# ncollide

./: .gitignore  .gitmodules  .travis.configure.sh  .travis.yml  CHANGELOG.md  CNAME  Cargo.toml  Makefile  README.md  SUMMARY.md  book.json  copy_doc.sh  examples2d  examples3d  fix_rustdoc.sh  index.html  mkdocs.yml  params.json  publish.sh  rustfmt.toml
book/src/: Cargo.toml  Makefile  aabb3d.rs  ball2d.rs  ball3d.rs  bounding_sphere2d.rs  capsule2d.rs  capsule3d.rs  compound2d.rs  compound3d.rs  compound_data2d.rs  cone3d.rs  configuration_space_obstacle2d.rs  configuration_space_obstacle3d.rs  configure  cuboid2d.rs  cuboid3d.rs  cylinder3d.rs  dbvt_broad_phase2d.rs  getting_started.rs  hacd3d.rs  mesh2d.rs  mesh3d.rs  minkowski_sum2d.rs  minkowski_sum3d.rs  plane2d.rs  plane3d.rs  primitives2d.rs  primitives3d.rs  ray_bvt3d.rs  reflection2d.rs  reflection3d.rs  solid_ray_cast2d.rs
ncollide_entities/: Cargo.toml  lib.rs
ncollide_entities/bounding_volume/: aabb.rs  aabb_ball.rs  aabb_bezier_curve.rs  aabb_compound.rs  aabb_convex.rs  aabb_cuboid.rs  aabb_mesh.rs  aabb_plane.rs  aabb_repr.rs  aabb_segment.rs  aabb_support_map.rs  aabb_triangle.rs  aabb_utils.rs  bounding_sphere.rs  bounding_sphere_ball.rs  bounding_sphere_capsule.rs  bounding_sphere_compound.rs  bounding_sphere_cone.rs  bounding_sphere_convex.rs  bounding_sphere_cuboid.rs  bounding_sphere_cylinder.rs  bounding_sphere_mesh.rs  bounding_sphere_plane.rs  bounding_sphere_repr.rs  bounding_sphere_segment.rs  bounding_sphere_triangle.rs  bounding_sphere_utils.rs  bounding_volume.rs  bounding_volume_bvt.rs  mod.rs  spacialized_cone.rs
ncollide_entities/inspection/: impl_composite_shape_desc.rs  impl_support_map_desc.rs  maybe_as_composite_shape.rs  maybe_as_support_map.rs  mod.rs  repr.rs  shape.rs
ncollide_entities/partitioning/: bvt.rs  bvt_cost_fn.rs  bvt_visitor.rs  bvtt_visitor.rs  dbvt.rs  mod.rs
ncollide_entities/shape/: ball.rs  base_mesh.rs  capsule.rs  composite_shape.rs  compound.rs  cone.rs  convex.rs  cuboid.rs  cylinder.rs  minkowski_sum.rs  mod.rs  plane.rs  polyline.rs  reflection.rs  segment.rs  shape.rs  shape_handle.rs  triangle.rs  trimesh.rs
ncollide_entities/support_map/: ball_support_map.rs  capsule_support_map.rs  cone_support_map.rs  convex_support_map.rs  cuboid_support_map.rs  cylinder_support_map.rs  minkowski_sum_support_map.rs  mod.rs  reflection_support_map.rs  segment_support_map.rs  spec_support_map.rs  support_map.rs  triangle_support_map.rs  utils_support_map.rs
ncollide_geometry/: Cargo.toml  lib.rs
ncollide_geometry/bounding_volume/: aabb.rs  aabb_ball.rs  aabb_compound.rs  aabb_convex.rs  aabb_convex_polygon.rs  aabb_cuboid.rs  aabb_mesh.rs  aabb_plane.rs  aabb_repr.rs  aabb_segment.rs  aabb_shape.rs  aabb_support_map.rs  aabb_triangle.rs  aabb_utils.rs  bounding_sphere.rs  bounding_sphere_ball.rs  bounding_sphere_capsule.rs  bounding_sphere_compound.rs  bounding_sphere_cone.rs  bounding_sphere_convex.rs  bounding_sphere_cuboid.rs  bounding_sphere_cylinder.rs  bounding_sphere_mesh.rs  bounding_sphere_plane.rs  bounding_sphere_repr.rs  bounding_sphere_segment.rs  bounding_sphere_shape.rs  bounding_sphere_triangle.rs  bounding_sphere_utils.rs  bounding_volume.rs  bounding_volume_bvt.rs  mod.rs  polyhedral_cone.rs
ncollide_geometry/partitioning/: bvt.rs  bvt_visitor.rs  dbvt.rs  dbvt2.rs  mod.rs
ncollide_geometry/point/: mod.rs  point_aabb.rs  point_ball.rs  point_bounding_sphere.rs  point_bvt.rs  point_compound.rs  point_cuboid.rs  point_mesh.rs  point_plane.rs  point_repr.rs  point_segment.rs  point_support_map.rs  point_triangle.rs
ncollide_geometry/query/: mod.rs
ncollide_geometry/ray/: mod.rs  ray_aabb.rs  ray_ball.rs  ray_bounding_sphere.rs  ray_bvt.rs  ray_compound.rs  ray_cuboid.rs  ray_mesh.rs  ray_plane.rs  ray_shape.rs  ray_support_map.rs  ray_triangle.rs
ncollide_geometry/shape/: ball.rs  base_mesh.rs  capsule.rs  composite_shape.rs  compound.rs  cone.rs  convex.rs  convex_polyface.rs  convex_polygon.rs  convex_polyhedron.rs  cuboid.rs  cylinder.rs  minkowski_sum.rs  mod.rs  plane.rs  polyline.rs  reflection.rs  segment.rs  shape.rs  shape_impl.rs  support_map.rs  tetrahedron.rs  torus.rs  triangle.rs  trimesh.rs
ncollide_math/: Cargo.toml  isometry.rs  lib.rs  point.rs  vector.rs
ncollide_pipeline/: Cargo.toml  lib.rs
ncollide_pipeline/broad_phase/: broad_phase.rs  broad_phase_pair_filter.rs  brute_force_broad_phase.rs  dbvt_broad_phase.rs  dbvt_broad_phase2.rs  mod.rs
ncollide_pipeline/events/: mod.rs
ncollide_pipeline/narrow_phase/: ball_ball.rs  basic_collision_dispatcher.rs  collision_detector.rs  composite_shape_repr.rs  contact_signal.rs  default_narrow_phase.rs  mod.rs  narrow_phase.rs  (+5 more)
ncollide_procedural/: Cargo.toml  bezier.rs  capsule.rs  cone.rs  cuboid.rs  cylinder.rs  lib.rs  polyline.rs  quad.rs  sphere.rs  trimesh.rs  utils.rs  vec_slice.rs
ncollide_queries/: Cargo.toml  lib.rs
ncollide_testbed2d/: Cargo.toml  Makefile
ncollide_testbed3d/: Cargo.toml
ncollide_transformation/: Cargo.toml  convex_hull.rs  convex_hull2.rs  convex_hull3.rs  convex_hull_utils.rs  hacd.rs  lib.rs  triangulate.rs
ncollide_utils/: Cargo.toml  any_private.rs  as_bytes.rs  center.rs  cleanup.rs  cov.rs  cross3.rs  derivatives.rs  hashable_partial_eq.rs  id_allocator.rs  lib.rs  median.rs  optimization.rs  perp2.rs  point_cloud_support_point.rs  point_in_poly2d.rs  project_homogeneous.rs  repeat.rs  sort.rs  tetrahedron.rs  triangle.rs  vec_map.rs
src/: Cargo.toml  aabb2d.rs  aabb3d.rs  aliases.rs  ball2d.rs  ball3d.rs  bounding_sphere2d.rs  bounding_sphere3d.rs  capsule2d.rs  capsule3d.rs  compound2d.rs  compound3d.rs  compound_data2d.rs  cone.rs  cone3d.rs  configuration_space_obstacle2d.rs  configuration_space_obstacle3d.rs  configure  contact.rs  convex2d.rs  convex3d.rs  cuboid2d.rs  cuboid3d.rs  cylinder3d.rs  dbvt_broad_phase2d.rs  dbvt_broad_phase3d.rs  dsl.rs  getting_started.rs  hacd3d.rs  lib.rs  lib2df32.rs  lib2df64.rs  lib3df32.rs  lib3df64.rs  lib4df32.rs  lib4df64.rs  math.rs  mesh2d.rs  mesh3d.rs  minkowski_sum2d.rs  (+20 more)
(+7499 files in other folders)
