[package]
name    = "ncollide"
version = "0.9.1"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust."
documentation = "http://ncollide.org/rustdoc/ncollide"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
readme = "README.md"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

include = [
    "src/**/*.rs",
    "benches/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[lib]
name = "ncollide"
path = "src/lib.rs"

[dependencies]
ncollide_math = { path = "ncollide_math", version = "0.4.*" }
ncollide_utils = { path = "ncollide_utils", version = "0.4.*" }
ncollide_geometry = { path = "ncollide_geometry", version = "0.1.*" }
ncollide_pipeline = { path = "ncollide_pipeline", version = "0.8.*" }
ncollide_procedural = { path = "ncollide_procedural", version = "0.4.*" }
ncollide_transformation = { path = "ncollide_transformation", version = "0.4.*" }

[dev-dependencies]
nalgebra = "0.8.*"
rand = "0.3.*"
ncollide_testbed2d = { path = "ncollide_testbed2d", version = "0.1.*" }
ncollide_testbed3d = { path = "ncollide_testbed3d", version = "0.1.*" }
