[package]
name    = "ncollide"
version = "0.10.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust."
documentation = "http://ncollide.org/rustdoc/ncollide"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
readme = "README.md"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

include = [
    "src/**/*.rs",
    "benches/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[lib]
name = "ncollide"
path = "src/lib.rs"

[dependencies]
ncollide_math = { path = "ncollide_math", version = "0.5" }
ncollide_utils = { path = "ncollide_utils", version = "0.5" }
ncollide_geometry = { path = "ncollide_geometry", version = "0.2" }
ncollide_pipeline = { path = "ncollide_pipeline", version = "0.9" }
ncollide_procedural = { path = "ncollide_procedural", version = "0.5" }
ncollide_transformation = { path = "ncollide_transformation", version = "0.5" }

[dev-dependencies]
approx   = "0.1"
alga     = "0.5"
nalgebra = "0.11"
rand     = "0.3"
