[package]
name    = "ncollide_math"
version = "0.8.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module describing the algebraic entities used by ncollide."
documentation = "http://ncollide.org/rustdoc/ncollide_math"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_math"
path = "lib.rs"

[dependencies]
rustc-serialize = "0.3"
rand       = "0.3"
num-traits = "0.1"
approx     = "0.1"
alga       = "0.5"
nalgebra   = "0.13"
