[package]
name    = "ncollide_pipeline"
version = "0.5.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module describing the collision detection pipeline (broad phase/narrow phase) of ncollide."
documentation = "http://ncollide.org/doc/ncollide"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_pipeline"
path = "lib.rs"

[dependencies]
rustc-serialize = "*"
nalgebra = "*"
ncollide_math = "*"
ncollide_utils = "*"
ncollide_entities = "*"
ncollide_queries = "*"
