[package]
name    = "ncollide_pipeline"
version = "0.6.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module describing the collision detection pipeline (broad phase/narrow phase) of ncollide."
documentation = "http://ncollide.org/doc/ncollide_pipeline"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_pipeline"
path = "lib.rs"

[dependencies]
rustc-serialize = "0.3.*"
nalgebra = "0.5.*"
ncollide_math = { path = "../ncollide_math", version = "0.2.*" }
ncollide_utils = { path = "../ncollide_utils", version = "0.2.*" }
ncollide_entities = { path = "../ncollide_entities", version = "0.4.*" }
ncollide_queries = { path = "../ncollide_queries", version = "0.3.*" }
