[package]
name    = "ncollide_pipeline"
version = "0.12.1"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module describing the collision detection pipeline (broad phase/narrow phase) of ncollide."
documentation = "http://ncollide.org/rustdoc/ncollide_pipeline"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_pipeline"
path = "lib.rs"

[dependencies]
rustc-serialize = "0.3"
slab            = "0.4"
alga            = "0.5"
nalgebra        = "0.13"

ncollide_math     = { path = "../ncollide_math",     version = "0.8" }
ncollide_utils    = { path = "../ncollide_utils",    version = "0.8" }
ncollide_geometry = { path = "../ncollide_geometry", version = "0.5" }
