[package]
name    = "ncollide_procedural"
version = "0.2.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[lib]
name = "ncollide_procedural"
path = "lib.rs"

[dependencies]
rustc-serialize = "*"
num = "*"

[dependencies.nalgebra]
git = "https://github.com/sebcrozet/nalgebra"

[dependencies.ncollide_utils]
path = "../ncollide_utils"

[dependencies.ncollide_math]
path = "../ncollide_math"
