[package]
name    = "ncollide_procedural"
version = "0.2.4"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module for procedural generation of discrete geometric objects."
documentation = "http://ncollide.org/doc/ncollide"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_procedural"
path = "lib.rs"

[dependencies]
rustc-serialize = "*"
num = "*"
nalgebra = "*"
ncollide_math = { path = "../ncollide_math", version = "*" }
ncollide_utils = { path = "../ncollide_utils", version = "*" }
