[package]
name    = "ncollide_queries"
version = "0.2.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module for geometric queries like distances computation, ray casting and contact determination."
documentation = "http://ncollide.org/doc/ncollide"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision detection", "contact", "time of impact", "geometry", "distance", "ray cast", "convex", "intersection" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_queries"
path = "lib.rs"

[dependencies]
rustc-serialize = "*"
num = "*"
nalgebra = "*"

[dependencies.ncollide_math]
path = "../ncollide_math"

[dependencies.ncollide_utils]
path = "../ncollide_utils"

[dependencies.ncollide_entities]
path = "../ncollide_entities"
