[package]
name    = "ncollide_queries"
version = "0.2.1"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module for geometric queries like distances computation, ray casting and contact determination."
documentation = "http://ncollide.org/doc/ncollide"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_queries"
path = "lib.rs"

[dependencies]
rustc-serialize = "*"
num = "*"
nalgebra = "*"
ncollide_math = "*"
ncollide_utils = "*"
ncollide_entities = "*"
