[package]
name    = "ncollide_queries"
version = "0.4.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module for geometric queries like distances computation, ray casting and contact determination."
documentation = "http://ncollide.org/doc/ncollide_queries"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_queries"
path = "lib.rs"

[dependencies]
rustc-serialize = "0.3.*"
num = "0.1.*"
nalgebra = "0.8.*"
ncollide_math = { path = "../ncollide_math", version = "0.3.*" }
ncollide_utils = { path = "../ncollide_utils", version = "0.3.*" }
ncollide_entities = { path = "../ncollide_entities", version = "0.5.*" }
