[package]
name    = "ncollide_testbed2d"
version = "0.5.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2D testbed for ncollide."
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "ncollide", "geometry", "2D", "graphics", "testbed" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_testbed2d"

[features]
default = [ ]
recording = [ "mpeg_encoder" ]

[dependencies]
time         = "0.1"
num-traits   = "0.2"
rand         = "0.5"
sfml         = "0.11"
alga         = "0.6"
nalgebra     = "0.15"
ncollide2d   = { path = "../build/ncollide2d", version = "0.16" }
mpeg_encoder = { version = "0.2", optional = true }
