[package]
name    = "ncollide_testbed3d"
version = "0.3.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "3D testbed for ncollide."
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "ncollide", "geometry", "3D", "graphics", "testbed" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_testbed3d"

[features]
default = [ ]
recording = [ "mpeg_encoder" ]

[dependencies]
time         = "0.1"
rand         = "0.3"
num-traits   = "0.1"
glfw         = "0.8"
kiss3d       = "0.7"
mpeg_encoder = { version = "0.2", optional = true }
nalgebra     = "0.11"
ncollide     = { path = "..", version = "0.11" }

[replace]
"kiss3d:0.7.0"                  = { path = '../../kiss3d' }
"ncollide_procedural:0.6.0"     = { path = '../ncollide_procedural' }
"ncollide_transformation:0.6.0" = { path = '../ncollide_transformation' }
