[package]
name    = "ncollide_testbed3d"
version = "0.5.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "3D testbed for ncollide."
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "ncollide", "geometry", "3D", "graphics", "testbed" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_testbed3d"

[features]
default = [ ]
recording = [ "mpeg_encoder" ]

[dependencies]
time         = "0.1"
rand         = "0.5"
num-traits   = "0.2"
kiss3d       = "0.15"
mpeg_encoder = { version = "0.2", optional = true }
nalgebra     = "0.15"
ncollide3d   = "0.16"