[package]
name    = "ncollide_transformation"
version = "0.2.2"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

description = "2 and 3-dimensional collision detection library in Rust: module for transforming a geometric entity to another one by means of approximation/fitting."
documentation = "http://ncollide.org/doc/ncollide"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_transformation"
path = "lib.rs"

[dependencies]
rustc-serialize = "*"
num = "*"
nalgebra = "*"
ncollide_math = "*"
ncollide_utils = "*"
ncollide_entities = "*"
ncollide_queries = "*"
ncollide_procedural = "*"
