[package]
name    = "ncollide_utils"
version = "0.3.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]


description = "2 and 3-dimensional collision detection library in Rust: module for various common and simple geometric and mathematical operations."
documentation = "http://ncollide.org/doc/ncollide_utils"
homepage = "http://ncollide.org"
repository = "https://github.com/sebcrozet/ncollide"
keywords = [ "collision", "geometry", "distance", "ray", "convex" ]
license = "BSD-3-Clause"

[lib]
name = "ncollide_utils"
path = "lib.rs"

[dependencies]
rustc-serialize = "0.3.*"
rand = "0.3.*"
num = "0.1.*"
nalgebra = "0.8.*"
ncollide_math = { path = "../ncollide_math", version = "0.3.*" }
