[package]
name    = "ncollide-user-guide-hacd"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[dependencies]
rand = "0.3.*"
sfml = "0.11.*"
nalgebra = "0.8.*"
ncollide = "0.8.*"
kiss3d = "0.4.*"

[[bin]]
name = "hacd"
path = "./hacd.rs"

[[bin]]
name = "convex_hull"
path = "./convex_hull.rs"

[[bin]]
name = "path"
path = "./path.rs"

[[bin]]
name = "simple_geometries2d"
path = "./simple_geometries2d.rs"
